tests/samples/negative/pointers/index_void_pointer.ax
module index_void_pointer;

fn main() -> i32 {
    let pointer: *mut void = ptr_from_addr(*mut void, 0);
    let value = pointer[0];
    return 0;
}
